--- a/Views/ComplaintSuggestion/Create.cshtml
+++ b/Views/ComplaintSuggestion/Create.cshtml
@@ -30,5 +30,5 @@
         </tr>
     </table>
 
-    <input type="submit" value="Create">
+    <input type="submit" value="Create" class="btn btn-success">
 </form>
