--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 @using ComplaintsAndSuggestions.Entities
 @using ComplaintsAndSuggestions.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
