--- a/Views/ComplaintSuggestion/_ComplaintSuggestion.cshtml
+++ b/Views/ComplaintSuggestion/_ComplaintSuggestion.cshtml
@@ -1,9 +1,9 @@
 @model ComplaintSuggestionViewModel
 
-<section class="panel panel-primary">
+<section class="panel panel-primary text-muted pt-2 p-2">
     <div class="panel-heading">@Model.Subject</div>
     <div class="panel-body">
-        <div>
+        <div class="small border-bottom">
             <label>@Model.Resume</label>
         </div>
         <!-- <div>
