--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,12 +6,14 @@
         <meta name="viewport" content="width=device-width">
         <title>@ViewBag.Title</title>
 
+        <link href="/css/style.css" rel="stylesheet">
+
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-    <body>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
+    <body class="bg-light">
+        <nav class="navbar navbar-expand-lg bg-primary fixed-top">
+            <div class="container">
+                <div class="navbar-translate">
                     <a class="navbar-brand" href="/">Complaints and Suggestions</a>
                     
                     <div class="nav navbar-nav pull-right">
@@ -20,9 +22,9 @@
                 </div>
             </div>
         </nav>
-        <div>
-            @RenderBody()
-        </div>
+
+        @RenderBody()
+
         <footer>
             @RenderSection("footer", false)
         </footer>
